--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -38,7 +38,7 @@ checkPractitionerLocation: false
 # If you want it to be absolute, it MUST start with "http://" or "https://"
 # To use the embedded DTR smart app, use "/smart/launch.html"
 #launchUrl: /smart/launch.html
-launchUrl: http://localhost:3005/launch
+launchUrl: https://od.mettles.com/index
 
 appendParamsToSmartLaunchUrl: false
 
